Accessibility / contrast fixes

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -407,10 +407,10 @@ footer {
 // Overlay to fade in from top
 .footer-background-video-wrapper::after {
 	position: absolute;
-	top: 0;
+	top: -1px; // Fixes an odd bug in some chrome/android browsers causing a pixel line to appear
 	left: 0;
 	width: 100%;
-	height: 101%;
+	height: 100%;
 	content: '';
 	background-image: linear-gradient(
 		180deg,
