--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -10,7 +10,7 @@ $light-cyan: #c9f0f8;
 $gainsboro: #e8f9fd;
 $silver: #c5c3c6;
 $metallic: darken(#dbd9ce, 10%);
-$davys-grey: #808080;
+$davys-grey: darken(#808080, 6%);
 $black-coral: #4b5b68;
 $eerie-black: #1e1e20;
 $blue-munsell: #19849f;
@@ -35,7 +35,7 @@ $color-link-visited: lighten($color-link, 10%);
 	--color-secondary: #{$saudade-blue-dark};
 	--color-tertiary: #{$middle-blue};
 	--color-accent: #{$lime-green};
-	--color-text: #{$davys-grey};
+	--color-text: #{$eerie-black};
 	--color-black: #{$eerie-black};
 	--color-error: #{$imperial-red};
 	--color-success: #{$lime-green};
@@ -43,10 +43,10 @@ $color-link-visited: lighten($color-link, 10%);
 	--color-link-hover: #{$color-link-hover};
 	--color-link-active: #{$color-link-active};
 	--color-link-visited: #{$color-link-visited};
+	--color-icon: #{$davys-grey};
 
 	--color-middle-blue: #{$middle-blue};
 	--color-light-grey: #{$gainsboro};
-	--color-icon-grey: #{$metallic};
 	--color-dark-grey: #{$black-coral};
 	--color-light-cyan: #{$light-cyan};
 	--color-grey: grey;
